--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: 网站名 # Website name
+title: 测试 # Website name
 baseurl: 'https://liliaow567.github.io/' # Website URL
 copyright: '' # Footer text, e.g. '© {year} Me'
 
