--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "public"]
-    path = public
-    url = https://github.com/liliaow567/liliaow567.github.io.git
-    branch = main
+	path = public
+	url = git@github.com:liliaow567/liliaow567.github.io.git
+	branch = main
